# authify-backend

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  deploy.sh  ecosystem.config.js
.github/workflows/: deploy.yml
migrations/: 001_create_users.sql  002_create_posts.sql  003_create_likes.sql
src/: lib.rs  main.rs
src/application/dto/: mod.rs  post_dto.rs  user_dto.rs
src/application/services/: mod.rs  post_service.rs  user_service.rs
src/config/: app_config.rs
src/domain/post/: entity.rs  mod.rs  repository.rs
src/domain/user/: entity.rs  mod.rs  repository.rs
src/error/: app_error.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs  pool.rs  post_repository.rs  user_repository.rs
src/infrastructure/firebase/: client.rs  mod.rs  user_repository.rs
src/presentation/: routes.rs
src/presentation/extractors/: auth_user.rs  mod.rs  validated_json.rs
src/presentation/handlers/: auth.rs  mod.rs  posts.rs
src/presentation/middleware/: auth.rs  mod.rs
